Archive2/f5/409f54586395ec/output
main.cpp:5:2: error: invalid preprocessing directive #RESPECT_TO_THOSE_DEVS_H
 #RESPECT_TO_THOSE_DEVS_H
  ^
